VH fix for safari on iOS

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -55,6 +55,9 @@ html,
 body,
 .template-container {
     height: 100%;
+    overflow-y: scroll;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    -webkit-overflow-scrolling: touch;
 }
 
 
